# surf

./: .gitignore  CONTRIBUTING.md  Dockerfile.web  LICENSE  README.md  install.sh  pyproject.toml  requirements.txt  surf.py  surf_backends.py  surf_config.py  surf_engine.py  surf_mcp.py  surf_store.py  surf_web.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
docs/product/: design-system.md  vto.md
docs/superpowers/plans/: 2026-05-28-surf-implementation.md  2026-05-29-adaptive-search.md  2026-06-16-alive-conversational-engine.md  2026-06-17-specialized-api-handlers.md  2026-06-18-perplexity-competitor-roadmap.md  2026-06-23-chesterton-quality-signals.md  2026-06-23-integrated-vault-search.md  2026-06-24-ux-refinements.md  2026-07-17-web-ui-polish.md  2026-07-18-fulfill-the-promise.md
docs/superpowers/specs/: 2026-05-28-surf-design.md  2026-05-29-adaptive-search-design.md  2026-05-29-terminal-ui-design.md  2026-06-04-specialized-api-integrations.md  2026-06-16-alive-conversational-engine.md  2026-06-25-web-ui-design-spec.md  2026-07-17-web-ui-polish-design.md  2026-07-18-fulfill-the-promise-design.md
tests/: test_engine.py  test_surf.py
tests/quality/: benchmark.py  queries.json
tests/quality/results/: benchmark_20260528_234938.json
web/static/: manifest.json  style.css
web/templates/: index.html
