[project]
name = "surf"
version = "0.1.0"
description = "AI search that learns. Terminal-native, privacy-first, nearly free."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Marcos Rodriguez", email = "marcosrrez@gmail.com"}]
keywords = ["search", "ai", "terminal", "cli", "research"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Internet :: WWW/HTTP :: Indexing/Search",
]

dependencies = [
    "anthropic>=0.105.0",
    "beautifulsoup4>=4.12",
    "ddgs>=9.14",
    "groq>=1.4",
    "requests>=2.31",
]

[project.optional-dependencies]
mcp = ["mcp>=1.0.0"]
dev = ["pytest>=9.0"]

[project.urls]
Homepage = "https://github.com/marcosrrez/surf"
Repository = "https://github.com/marcosrrez/surf"
Issues = "https://github.com/marcosrrez/surf/issues"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
